fixed the sonar warning